Remove version constraints from requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-requests>=2.31.0
-colorama>=0.4.6
-console>=0.9915
-urllib3>=2.0.7
-configparser>=6.0.0
-socks>=0.1.0
-PySocks>=1.7.1
-readchar>=4.1.0
+requests
+colorama
+console
+urllib3
+configparser
+socks
+PySocks
+readchar
